# DocForge-

./: .gitignore  .replit  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/: ai_hints.py  cover_page.py  formatter.py  ieee_formatter.py  main.py  nb_converter.py  sop_formatter.py
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/wordforge/: index.html  package.json
artifacts/wordforge/.replit-artifact/: artifact.toml
artifacts/wordforge/src/: App.tsx  index.css
artifacts/wordforge/src/components/: formatter-tab.tsx  notebook-tab.tsx  profile-section.tsx
artifacts/wordforge/src/pages/: home.tsx
attached_assets/: Pasted-Clear-Two-issues-visible-Image-1-output-doc-Header-ECSC_1780645331502.txt  Pasted-Good-reference-Read-the-PDF-fully-Here-s-what-ur-univer_1780644444863.txt  Pasted-Here-s-the-Replit-prompt-to-add-this-as-a-built-in-temp_1780733351733.txt  Pasted-Here-s-the-full-Replit-prompt-Apply-the-following-fixes_1780732520596.txt  Pasted-Here-s-the-full-prompt-to-paste-into-Replit-AI-chat-Bui_1780641847118.txt  Pasted-No-search-past-chats-tool-available-Going-off-memory-in_1780643311341.txt
lib/api-spec/: openapi.yaml
