[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "mistletoe>=1.5.1",
    "nbformat>=5.10.4",
    "pillow>=12.2.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
